--- a/index.html
+++ b/index.html
@@ -10,30 +10,26 @@
     <style type="text/css">
       body {
         padding-top: 20px;
-        padding-bottom: 60px;
+        padding-bottom: 40px;
       }
 
       /* Custom container */
-      .container {
+      .container-narrow {
         margin: 0 auto;
-        max-width: 1000px;
+        max-width: 700px;
       }
-      .container > hr {
-        margin: 60px 0;
+      .container-narrow > hr {
+        margin: 30px 0;
       }
 
       /* Main marketing message and sign up button */
       .jumbotron {
-        margin: 80px 0;
+        margin: 60px 0;
         text-align: center;
       }
       .jumbotron h1 {
-        font-size: 100px;
+        font-size: 64px;
         line-height: 1;
-      }
-      .jumbotron .lead {
-        font-size: 24px;
-        line-height: 1.25;
       }
       .jumbotron .btn {
         font-size: 21px;
@@ -46,36 +42,6 @@
       }
       .marketing p + h4 {
         margin-top: 28px;
-      }
-
-
-      /* Customize the navbar links to be fill the entire space of the .navbar */
-      .navbar .navbar-inner {
-        padding: 0;
-      }
-      .navbar .nav {
-        margin: 0;
-        display: table;
-        width: 100%;
-      }
-      .navbar .nav li {
-        display: table-cell;
-        width: 1%;
-        float: none;
-      }
-      .navbar .nav li a {
-        font-weight: bold;
-        text-align: center;
-        border-left: 1px solid rgba(255,255,255,.75);
-        border-right: 1px solid rgba(0,0,0,.1);
-      }
-      .navbar .nav li:first-child a {
-        border-left: 0;
-        border-radius: 3px 0 0 3px;
-      }
-      .navbar .nav li:last-child a {
-        border-right: 0;
-        border-radius: 0 3px 3px 0;
       }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -95,58 +61,53 @@
 
   <body>
 
-    <div class="container" contenteditable="true">
+    <div class="container-narrow" contenteditable="true">
 
       <div class="masthead">
-        <h3 class="muted">Rapilabs</h3>
-        <div class="navbar">
-          <div class="navbar-inner">
-            <div class="container">
-              <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Downloads</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-        </div><!-- /.navbar -->
-      </div>
-
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-        <h1>Free BPMN Editor</h1>
-        <p class="lead">Rigrr is a free BPMN editor that utilises modern browser technologies to afford the user a smooth and seamless interactive experience</p>
-        <a class="btn btn-large btn-success" href="#">Get started today</a>
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <h3 class="muted">rapilabs</h3>
       </div>
 
       <hr>
 
-      <!-- Example row of columns -->
-      <div class="row-fluid">
-        <div class="span4">
-          <h2>What is BPMN?</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <div class="jumbotron">
+        <h1>Business agility tools</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <a class="btn btn-large btn-success" href="#">Sign up today</a>
+      </div>
+
+      <hr>
+
+      <div class="row-fluid marketing">
+        <div class="span6">
+          <h4>Business Process Management</h4>
+          <p>Model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is freely available HTML5 based application and requires no registration. &nbsp;Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome webstore</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
           <p><a class="btn" href="#">View details »</a></p>
+
+          <h4><br></h4>
+
+          <h4><br></h4>
         </div>
-        <div class="span4">
-          <h2>No registration</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+
+        <div class="span6">
+          <h4>Adaptive Case Management</h4>
+          <p>Manage ad-hoc processes &amp; data alongside structured ones. &nbsp;Acme incorporates Rigrr to define context within the process execution.</p>
           <p><a class="btn" href="#">View details »</a></p>
-       </div>
-        <div class="span4">
-          <h2>Easy to use</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn" href="#">View details »</a></p>
+
+          <h4><br></h4>
+
+          <h4><br></h4>
         </div>
       </div>
 
       <hr>
 
       <div class="footer">
-        <p>© Company 2013</p>
+        <p>© Rapilabs 2010-2013</p>
       </div>
 
     </div> <!-- /container -->
@@ -169,6 +130,7 @@
     <script src="js/bootstrap-typeahead.js"></script>
 
   
+
 
 
 </body></html>
