--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         max-width: 700px;
       }
       .container-narrow > hr {
-        margin: 30px 0;
+        /*margin: 30px 0;*/
       }
 
       /* Main marketing message and sign up button */
@@ -69,15 +69,14 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="muted">rapilabs</h3>
+        <div class="muted"><img src="img/logo.png"/><p><br/>Busines agility tools</p></div>
       </div>
 
       <hr>
 
-      <div class="jumbotron">
+      <div class="jumbotron" style="background-image: url('img/banner.png'); height: 351px; color: white;">
         <h1>Business agility tools</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <a class="btn btn-large btn-success" href="#">Sign up today</a>
       </div>
 
       <hr>
@@ -85,7 +84,8 @@
       <div class="row-fluid marketing">
         <div class="span6">
           <h4>Business Process Management</h4>
-          <p>Model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is freely available HTML5 based application and requires no registration. &nbsp;Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome webstore</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
+          <p>Model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is freely available HTML5 based application and requires no registration.</p>
+          <p>Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome webstore</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
           <p><a class="btn" href="#">View details »</a></p>
 
           <h4><br></h4>
