--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       }
       .container-narrow > hr {
         /*margin: 30px 0;*/
+        border-top: 1px solid #dedad0;
       }
 
       /* Main marketing message and sign up button */
       .jumbotron {
-        margin: 60px 0;
+        /*margin: 60px 0;*/
         text-align: center;
       }
       .jumbotron h1 {
@@ -69,14 +70,14 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <div class="muted"><img src="img/logo.png"/><p><br/>Busines agility tools</p></div>
+        <div class="muted"><img src="img/logo.png"><p>Cloud based business application development</p></div>
       </div>
 
       <hr>
 
       <div class="jumbotron" style="background-image: url('img/banner.png'); height: 351px; color: white;">
         <h1>Business agility tools</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p class="lead">Increase your business agility by empowering your workforce</p>
       </div>
 
       <hr>
@@ -84,7 +85,7 @@
       <div class="row-fluid marketing">
         <div class="span6">
           <h4>Business Process Management</h4>
-          <p>Model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is freely available HTML5 based application and requires no registration.</p>
+          <p>Model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is a freely available HTML5 based application and requires no registration.</p>
           <p>Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome webstore</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
           <p><a class="btn" href="#">View details »</a></p>
 
@@ -130,6 +131,7 @@
     <script src="js/bootstrap-typeahead.js"></script>
 
   
+
 
 
 
