Setup bpm & acm pages

--- a/acm.html
+++ b/acm.html
@@ -77,23 +77,22 @@
 
       <hr>
 
-      <div class="jumbotron">
-        <p class="lead">Increase your business agility by empowering your workforce</p>
-      </div>
-
       <div class="row-fluid marketing">
-        <div class="span6">
-          <h4>Business Process Management</h4>
-          <p>Model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is a freely available HTML5 based application and requires no registration.</p>
-          <p>Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome webstore</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
-          <p><a class="btn" href="bpm.html">Find out more »</a></p>
-
+        <div class="span4">
+          <img src="img/working.png">
         </div>
 
-        <div class="span6">
+        <div class="span8">
           <h4>Adaptive Case Management</h4>
-          <p>Manage ad-hoc processes &amp; data alongside structured ones. &nbsp;Acme incorporates Rigrr to define context within the process execution.</p>
-          <p><a class="btn" href="acm.html">Find out more »</a></p>
+          <p>Empower your workforce by allowing them to define the process &amp; data requirements - <em>all while they are using the system</em>.</p>
+          <p>Forrester define ACM systems to have the following attributes:</p>
+          <ul>
+            <li>Allows runtime and design time changes</li>
+            <li>Allow workers to select predefined process steps</li>
+            <li>Provide information in context</li>
+          </ul>
+          <p>Acme is a cloude based product in pre-release testing that utilises the latest HTML5 &amp; database design to achieve a level of flexibility required for SMEs to operate with agility.</p>
+          <p>To find out more, contact us at sales@rapilabs.com</p>
 
         </div>
       </div>
@@ -125,6 +124,8 @@
     <script src="js/bootstrap-typeahead.js"></script>
 
   
+
+
 
 
 
