--- a/bpm.html
+++ b/bpm.html
@@ -77,23 +77,15 @@
 
       <hr>
 
-      <div class="jumbotron">
-        <p class="lead">Increase your business agility by empowering your workforce</p>
-      </div>
-
       <div class="row-fluid marketing">
-        <div class="span6">
-          <h4>Business Process Management</h4>
-          <p>Model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is a freely available HTML5 based application and requires no registration.</p>
-          <p>Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome webstore</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
-          <p><a class="btn" href="bpm.html">Find out more »</a></p>
-
+        <div class="span4">
+          <img src="img/modelling.png">
         </div>
 
-        <div class="span6">
-          <h4>Adaptive Case Management</h4>
-          <p>Manage ad-hoc processes &amp; data alongside structured ones. &nbsp;Acme incorporates Rigrr to define context within the process execution.</p>
-          <p><a class="btn" href="acm.html">Find out more »</a></p>
+        <div class="span8">
+          <h4>Rigrr BPMN Editor</h4>
+          <p>Rigrr is a free BPMN editor available either online at <a href="http://rigrr.rapilabs.com">rigrr.rapilabs.com</a> or by downloading and running offline. It saves its process models to files using the BPMN 2.0 XML serialisation format.</p><p>Rigrr is a serverless web application that utilises HTML5 technologies to achieve a higher degree of user experience than traditional web applications. Because it does not rely on a server to operate, Rigrr is totally offline capable.</p>
+          <p><h4 style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: rgb(51, 51, 51);">Library Distribution</h4><div>A JavaScript library is available on a per-request basis at a negotiated price.</div><div><br></div></p>
 
         </div>
       </div>
@@ -125,6 +117,7 @@
     <script src="js/bootstrap-typeahead.js"></script>
 
   
+
 
 
 
