Further definition of wording, added contact page

--- a/acm.html
+++ b/acm.html
@@ -66,8 +66,8 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="http://rapilabs.com/blog">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="muted"><img src="img/logo.png">
@@ -84,15 +84,13 @@
 
         <div class="span8">
           <h4>Adaptive Case Management</h4>
-          <p>Empower your workforce by allowing them to define the process &amp; data requirements - <em>all while they are using the system</em>.</p>
-          <p>Forrester define ACM systems to have the following attributes:</p>
+          <p>Empower your workforce by allowing them to define the process &amp; data requirements with Acme.</p><p>Acme is a cloud based product in limited release that utilises the latest HTML5 &amp; database design to achieve a level of flexibility required for SMEs to operate with agility.</p>
+          <p>Acme incorporates the following features:</p>
           <ul>
-            <li>Allows runtime and design time changes</li>
-            <li>Allow workers to select predefined process steps</li>
-            <li>Provide information in context</li>
-          </ul>
-          <p>Acme is a cloude based product in pre-release testing that utilises the latest HTML5 &amp; database design to achieve a level of flexibility required for SMEs to operate with agility.</p>
-          <p>To find out more, contact us at sales@rapilabs.com</p>
+            <li>Process flow can be defined at runtime</li><li>Processes are defined through process maps and/or tasklists</li>
+            <li>Data storage needs and form based layouts are designed at runtime</li>
+            <li>Templates may be created from scratch or from existing case examples</li><li>Cases may be spawned from scratch or from a template</li></ul>
+          <p>To find out more, contact us at acm@rapilabs.com</p>
 
         </div>
       </div>
@@ -124,6 +122,7 @@
     <script src="js/bootstrap-typeahead.js"></script>
 
   
+
 
 
 
