--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="http://rapilabs.com/blog">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="muted"><img src="img/logo.png">
@@ -84,7 +84,7 @@
       <div class="row-fluid marketing">
         <div class="span6">
           <h4>Business Process Management</h4>
-          <p>Model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is a freely available HTML5 based application and requires no registration.</p>
+          <p>Document &amp; model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is a freely available HTML5 based application and requires no registration.</p>
           <p>Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome webstore</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
           <p><a class="btn" href="bpm.html">Find out more »</a></p>
 
@@ -92,7 +92,7 @@
 
         <div class="span6">
           <h4>Adaptive Case Management</h4>
-          <p>Manage ad-hoc processes &amp; data alongside structured ones. &nbsp;Acme incorporates Rigrr to define context within the process execution.</p>
+          <p>Go beyond BPM by supporting your organisation's ad-hoc process &amp; data management needs with <em>Adaptive Case Management</em>.</p><p>Acme provides the ability to define both structured &amp; unstructured processes.</p>
           <p><a class="btn" href="acm.html">Find out more »</a></p>
 
         </div>
@@ -125,6 +125,7 @@
     <script src="js/bootstrap-typeahead.js"></script>
 
   
+
 
 
 
