--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
         <ul class="nav nav-pills pull-right">
           <li><a href="/">Home</a></li>
           <li><a href="http://rapilabs.com/blog">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="muted"><img src="img/logo.png">
         <p style="padding-left: 80px; margin-top: -10px; letter-spacing: 0.1em;">Business agility tools</p>
@@ -77,17 +77,14 @@
 
       <hr>
 
-      <div class="row-fluid marketing">
-        <div class="span4">
-          <img src="img/modelling.png">
-        </div>
-
-        <div class="span8">
-          <h4>Rigrr BPMN Editor</h4>
-          <p>Rigrr is a free BPMN editor available either online at <a href="http://rigrr.rapilabs.com">rigrr.rapilabs.com</a> or by installing from the Chrome Webstore. It saves its process models to files using the BPMN 2.0 XML serialisation format.</p><p>Rigrr is a serverless web application that utilises HTML5 technologies to achieve a higher degree of user experience than traditional web applications. Because it does not rely on a server to operate, Rigrr is 100% offline capable.</p>
-          <p></p><h4 style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: rgb(51, 51, 51);">Library Distribution</h4><div>A JavaScript library is available on a per-request basis. &nbsp;To find out more please contact rigrr@rapilabs.com.</div><div><br></div><div><br></div><p></p>
-
-        </div>
+      <div class="marketing">
+        <h4>Contact</h4>
+        <p>For more information please contact me on:</p>
+        <address>
+         <strong>David Sanders</strong><br/>
+         <strong>Ph</strong> 0402 976 646<br/>
+         <strong>Email</strong> dsanders@rapilabs.com
+        </address>
       </div>
 
       <hr>
@@ -117,7 +114,6 @@
     <script src="js/bootstrap-typeahead.js"></script>
 
   
-
 
 
 
