--- a/acm.html
+++ b/acm.html
@@ -67,7 +67,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li><a href="/">Home</a></li>
-          <li><a href="http://rapilabs.com/blog">Blog</a></li>
+          <li><a href="/blog">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="muted"><img src="img/logo.png">
@@ -90,7 +90,7 @@
             <li>Process flow can be defined at runtime</li><li>Processes are defined through process maps and/or tasklists</li>
             <li>Data storage needs and form based layouts are designed at runtime</li>
             <li>Templates may be created from scratch or from existing case examples</li><li>Cases may be spawned from scratch or from a template</li></ul>
-          <p>To find out more, contact us at acm@rapilabs.com</p>
+          <p>To find out more, please contact <a href="mailto:acm@rapilabs.com">acm@rapilabs.com</a></p>
 
         </div>
       </div>
