--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li><a href="/">Home</a></li>
-          <li><a href="http://rapilabs.com/blog">Blog</a></li>
+          <li><a href="/blog">Blog</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="muted"><img src="img/logo.png">
@@ -79,11 +79,11 @@
 
       <div class="marketing">
         <h4>Contact</h4>
-        <p>For more information please contact me on:</p>
+        <p>For more information please contact:</p>
         <address>
          <strong>David Sanders</strong><br/>
-         <strong>Ph</strong> 0402 976 646<br/>
-         <strong>Email</strong> dsanders@rapilabs.com
+         <strong>Phone</strong> +61 402 976 646<br/>
+         <strong>Email</strong> <a href="mailto:dsanders@rapilabs.com">dsanders@rapilabs.com</a>
         </address>
       </div>
 
