--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="http://rapilabs.com/blog">Blog</a></li>
+          <li><a href="/blog">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="muted"><img src="img/logo.png">
