--- a/bpm.html
+++ b/bpm.html
@@ -67,7 +67,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li><a href="/">Home</a></li>
-          <li><a href="http://rapilabs.com/blog">Blog</a></li>
+          <li><a href="/blog">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="muted"><img src="img/logo.png">
@@ -85,7 +85,7 @@
         <div class="span8">
           <h4>Rigrr BPMN Editor</h4>
           <p>Rigrr is a free BPMN editor available either online at <a href="http://rigrr.rapilabs.com">rigrr.rapilabs.com</a> or by installing from the Chrome Webstore. It saves its process models to files using the BPMN 2.0 XML serialisation format.</p><p>Rigrr is a serverless web application that utilises HTML5 technologies to achieve a higher degree of user experience than traditional web applications. Because it does not rely on a server to operate, Rigrr is 100% offline capable.</p>
-          <p></p><h4 style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: rgb(51, 51, 51);">Library Distribution</h4><div>A JavaScript library is available on a per-request basis. &nbsp;To find out more please contact rigrr@rapilabs.com.</div><div><br></div><div><br></div><p></p>
+          <p></p><h4 style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: rgb(51, 51, 51);">Library Distribution</h4><div>A JavaScript library that is capapble of being embedded within a 3rd party application is available on a per-request basis. &nbsp;To find out more please contact <a href="mailto:rigrr@rapilabs.com">rigrr@rapilabs.com</a>.</div><div><br></div><div><br></div><p></p>
 
         </div>
       </div>
