Remove links to non-existent js, trying to fix issue with chrome not reserving space for logo

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
           <li><a href="/blog">Blog</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="muted"><img src="img/logo.png">
+        <div class="muted"><img src="img/logo.png" width="232" height="70">
         <p style="padding-left: 80px; margin-top: -10px; letter-spacing: 0.1em;">Business agility tools</p>
         </div>
       </div>
@@ -99,19 +99,6 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap-transition.js"></script>
-    <script src="js/bootstrap-alert.js"></script>
-    <script src="js/bootstrap-modal.js"></script>
-    <script src="js/bootstrap-dropdown.js"></script>
-    <script src="js/bootstrap-scrollspy.js"></script>
-    <script src="js/bootstrap-tab.js"></script>
-    <script src="js/bootstrap-tooltip.js"></script>
-    <script src="js/bootstrap-popover.js"></script>
-    <script src="js/bootstrap-button.js"></script>
-    <script src="js/bootstrap-collapse.js"></script>
-    <script src="js/bootstrap-carousel.js"></script>
-    <script src="js/bootstrap-typeahead.js"></script>
 
   
 
