--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
           <li><a href="/blog">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="muted"><img src="img/logo.png">
-        <p style="padding-left: 80px; margin-top: -10px; letter-spacing: 0.1em;">Business agility tools</p>
+        <div class="muted">
+         <div><img src="img/logo.png" width="232" height="70"/></div>
+         <p style="padding-left: 80px; margin-top: -10px; letter-spacing: 0.1em;">Business agility tools</p>
         </div>
       </div>
 
@@ -110,19 +111,6 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap-transition.js"></script>
-    <script src="js/bootstrap-alert.js"></script>
-    <script src="js/bootstrap-modal.js"></script>
-    <script src="js/bootstrap-dropdown.js"></script>
-    <script src="js/bootstrap-scrollspy.js"></script>
-    <script src="js/bootstrap-tab.js"></script>
-    <script src="js/bootstrap-tooltip.js"></script>
-    <script src="js/bootstrap-popover.js"></script>
-    <script src="js/bootstrap-button.js"></script>
-    <script src="js/bootstrap-collapse.js"></script>
-    <script src="js/bootstrap-carousel.js"></script>
-    <script src="js/bootstrap-typeahead.js"></script>
 
   
 
