Added link to chrome web store and corrected spelling

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="span6">
           <h4>Business Process Management</h4>
           <p>Document &amp; model your business processes with Rigrr - a simple and easy to use busines process modeller using the BPMN 2.0 format. &nbsp;Rigrr is a freely available HTML5 based application and requires no registration.</p>
-          <p>Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome webstore</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
+          <p>Either install Rigrr from the <a href="https://chrome.google.com/webstore/detail/rigrr/lkkefodmoklnelkhifkakjlgncijfnnf">Chrome Web Store</a> or simply access online at <a href="http://rigrr.rapilabs.com">http://rigrr.rapilabs.com</a></p>
           <p><a class="btn" href="bpm.html">Find out more »</a></p>
 
         </div>
