--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <title>Rapilabs - Business agility tools</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Business agility tools">
     <meta name="author" content="">
 
     <!-- Le styles -->
